twelth update